# vgi-challenge

./: .gitignore  Jay.ipynb  README.md  SIRI_VM_Test_VGI.json  index.html  jstops.json  main.ipynb  main.py  pyproject.toml  single_bus.xml  test.html  test_with_only_1_bus.xml  trips.ipynb  vehicle_activity.json
GTFS-Daten/: agency.txt  calendar.txt  routes.txt  stops.txt
GTFS-human-readable/: stops.json  trips.csv  trips_summary.json  vehicle_activity.json
code-archive/: LoadBusInfo.ipynb  main.ipynb  map_with_zoom_behavior.html  xml-tidy.ipynb
py-scripts/: LoadBusInfo.py  create_map.py  filepaths.py  getStopsInfo.py  main.py
test_xml/: double_bus.xml
vgi_site/: db.sqlite3  manage.py
vgi_site/basic_scripts/: main.py
vgi_site/folium_app/: apps.py  forms.py  models.py  utils.py  views.py
vgi_site/folium_app/map_generation/: LoadBusInfo.py  map_generation.py
vgi_site/folium_app/migrations/: 0001_initial.py  0002_remove_uploadedfile_updated_at_and_more.py
vgi_site/folium_app/static/: default.xml
vgi_site/folium_app/static/GTFS-Daten/: calendar_dates.txt  feed_info.txt  transfers.txt  trips.txt
vgi_site/folium_app/static/css/: home.css  leaderboard.css  styles.css  upload_file.css
vgi_site/folium_app/templates/: leaderboard.html  main.html  map.html  success.html  template.html  upload.html  upload_file.html
vgi_site/folium_site/: asgi.py  settings.py  urls.py  wsgi.py
vgi_site/uploads/: SIRI_VM_Test_VGI.xml  received.xml
